# Task-Manager-FastAPI

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Justfile  README.md  alembic.ini  docker-compose.yml  docker-entrypoint.sh  pyproject.toml
.github/workflows/: cd.yml  ci.yml
alembic/: env.py
alembic/versions/: 6392a705d4e1_create_tags_and_task_tags.py  d3360cd6d7ff_create_users_and_tasks.py
app/: config.py  database.py  get_or_404.py  logging_config.py  main.py  metrics.py  middleware.py  redis.py  telemetry.py
app/cache/: __init__.py  tasks_list.py
app/limits/: dependencies.py  service.py
app/models/: mixins.py  tag.py  task.py  user.py
app/repositories/: tag_repo.py  task_repo.py  user_repo.py
app/routes/: auth.py  dashboard.py  health.py  metrics.py  tags.py  tasks.py
app/schemas/: auth.py  dashboard.py  tag.py  task.py
app/security/: dependences.py  jwt.py  password.py  refresh_guard.py
app/services/: auth.py  tag.py  task.py
load/: locustfile.py
monitoring/: prometheus.yml
tests/: conftest.py
tests/api/: conftest.py  test_auth_routes.py  test_dashboard_routes.py  test_readiness.py  test_tags_routes.py  test_tasks_routes.py
tests/integration/: conftest.py
tests/integration/repositories/: test_tag_repo_integration.py  test_task_repo_integration.py  test_user_repo_integration.py
tests/integration/services/: test_auth_service_integration.py  test_task_tag_services_integration.py
tests/unit/: test_database_and_redis.py  test_main_app.py  test_metrics_module.py
tests/unit/cache/: test_tasks_list_cache.py
tests/unit/limits/: test_service.py
tests/unit/routes/: test_health_routes.py  test_metrics_route.py  test_tasks_fire_forget.py
tests/unit/security/: test_dependences.py  test_jwt.py  test_password.py  test_refresh_guard.py
tests/unit/services/: test_auth_service.py  test_tag_service.py  test_task_service.py
(+2 files in other folders)
